# kagent

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  agents.py  datasources_config.json  knowledgespace_api.py  ks_search_tool.py  main.py  retrieval.py
data_processing/: Test1.ipynb  all_chunks.py  create_filters.py  embedding_model_768.py  generate_unique_ids.py  ksdata_scraping.py  push_to_bq.py  vectorstore.py  visualise.py
data_processing/preprocess/: scr_002145_neuromorpho_modelimage.py  scr_002721_gensat_geneexpression.py  scr_002978_aba_expression.py  scr_003105_neurondb_currents.py  scr_003510_cil_images.py  scr_005031_openneuro.py  scr_005069_brainminds.py  scr_006131_hba_atlas.py  scr_006274_neuroelectro_ephys.py  scr_007271_modeldb_models .py  scr_013705_neuroml_models.py  scr_014194_icg_ionchannels.py  scr_014306_bbp_cellmorphology.py  scr_016433_conp.py  scr_017041_sparc.py  scr_017041_sparc_old.py  scr_017571_dandi.py  scr_017612_ebrains.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  styles.css
frontend/src/components/: LoadingMessage.tsx  Logo.tsx  MessageBubble.tsx
